# marceddy

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
marceddy/: __init__.py  apply.py  autofill.py  browser_harvest.py  cli.py  config.py  creds.py  dedup.py  digest.py  email_track.py  fit.py  ledger.py  models.py  outreach.py  pipeline.py  policy.py  profile.py  sources.py  tailor.py
marceddy/data/: companies.json  jobs_fixture.json
marceddy/data/mailbox/: 01_northwind_interview.eml  02_acmecloud_reply.eml  03_globex_reject.eml  04_newsletter_unrelated.eml
tests/: conftest.py  test_apply.py  test_autofill.py  test_companies.py  test_dedup.py  test_digest.py  test_email_track.py  test_feed_sources.py  test_fit.py  test_indeed_salary.py  test_jsearch.py  test_keyed_sources.py  test_learn.py  test_ledger.py  test_more_sources.py  test_outreach.py  test_pipeline.py  test_relevance.py  test_search.py  test_simplyhired.py  test_tailor.py
tools/: probe_blocked_ats.py
