[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "marceddy"
version = "0.1.0"
description = "MarcEddy — autonomous job-application agent (dry-run by default)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Ed Cadet" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
marceddy = "marceddy.cli:main"

[tool.setuptools]
packages = ["marceddy"]

[tool.setuptools.package-data]
marceddy = ["data/*.json", "data/mailbox/*.eml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
